# Basic-Game-Engine

./: .gitignore  CMakeLists.txt  Game.sln  README.md  unique.txt
Game/: CMakeLists.txt  Game.vcxproj  game.cpp
Game/Assets/Shaders/: defaultCCGEVertex.glsl
ccGE/: CMakeLists.txt  Event.cpp  Event.h  Keys.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  WindowImplementation.h  ccGE.h  ccGE.vcxproj  ccGE.vcxproj.filters  ccGEApp.cpp  ccGEApp.h  ccGEUtil.h  ccGEWindow.cpp  ccGEWindow.h
ccGE/GLFWcode/: GLFWimplementation.cpp  GLFWimplementation.h
ccGE/OpenGLCode/: OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
